--- a/module3/index.html
+++ b/module3/index.html
@@ -13,6 +13,7 @@
     <!-- <script src = '4.js'></script> -->
     <!-- <script src = '5.js'></script> -->
     <!-- <script src = '6.js'></script> -->
-    <script src = '7.js'></script>
+    <!-- <script src = '7.js'></script> -->
+    <script src = 'test.js'></script>
 </body>
 </html>
